# simpletcp

./: Cargo.toml  README.md  build.rs
.github/workflows/: test.yml
examples/: adder-client.rs  adder-server.rs  file-upload.rs  fingerprint.rs  simple.rs
src/: lib.rs
src/simpletcp/: mod.rs  tests.rs
src/utils/: mod.rs  tests.rs
src/utils/platform/: interface.h  unix.c  windows.c
