[package]
name = "simpletcp"
version = "1.2.1"
authors = ["ondralukes <mail@ondralukes.cz>"]
license-file = "LICENSE"
license = "MIT"
description = "Crate for simple and secure tcp communication"
repository = "https://github.com/ondralukes/simpletcp"
readme = "README.md"
categories = ["network-programming", "cryptography"]
keywords = ["tcp", "net", "network"]
edition = "2018"
exclude = ["/.github"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.30"
rand = "0.8.3"

[build-dependencies]
cc = { version = "1.0.59", features = ["parallel"] }
bindgen = "0.64.0"